--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Job File Management System with Firebase",
   "main": "index.html",
   "scripts": {
-    "dev": "python -m http.server 8000",
-    "start": "python -m http.server 8000"
+    "dev": "npx serve -s . -l 8000",
+    "start": "npx serve -s . -l 8000"
   },
   "keywords": ["job-file", "management", "firebase"],
   "author": "",
