--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,15 @@
     {
       "src": "http://qgocargo.com/logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "http://qgocargo.com/logo.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
+
