--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,13 @@
       "src": "http://qgocargo.com/logo.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "http://qgocargo.com/logo.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
